# mtpserver

./: CMakeLists.txt  README.MD  client.cpp  ipc_channel.hpp  ipc_server.hpp  message_handler.cpp  message_handler.hpp  mtp_exception.hpp  mtp_server.cpp  mtp_server.hpp  server.cpp  uds_channel.cpp  uds_channel.hpp  uds_server.cpp  uds_server.hpp  user_data_handler.cpp  user_data_handler.hpp
